vocab: import 考研红宝书 word list with SM-2 recitation flow
